--- a/Style.css
+++ b/Style.css
@@ -547,7 +547,7 @@ body {
       border: 1px solid #ccc;
       padding: 20px;
       border-radius: 10px;
-      max-width: 500px;
+      width: 300px;
       margin: 0 auto;
       text-align: center;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
